--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "interactjs": "^1.10.8",
     "moment": "^2.29.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-calendar-timeline": "^0.27.0",
     "react-dom": "^17.0.1",
